# prima-bi-metadata

./: .gitignore  README.md  metadata.db  pyproject.toml
data/: sample_data.json
scripts/: show_db.py
src/prima_bi_metadata/: __init__.py  config.py  main.py  storage.py  storage.py.bak  transform.py
src/prima_bi_metadata.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_check_db.py  test_show_schema.py
