[tool.poetry]
name = "prima-bi-metadata"
version = "0.1.0"
description = "BI metadata pipeline"
authors = ["Davide <tuo@email>"]

packages = [
  { include = "prima_bi_metadata", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
requests = "^2.32.5"
pandas = "^2.2.0"
sqlalchemy = "^2.0.0"
python-dotenv = "^1.0.1"
retrying = "^1.3.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
